# releasy

./: Cargo.toml  README.md
.github/workflows/: ci.yml
cross-repo-graph/: Cargo.toml
cross-repo-graph/src/: error.rs  lib.rs  manifest.rs  plan.rs
releasy-core/: Cargo.toml
releasy-core/src/: error.rs  event.rs  lib.rs  repo.rs
releasy-emit/: Cargo.toml
releasy-emit/src/: cmd.rs  event.rs  main.rs
releasy-emit/tests/: repo-plan-sway-wallet-sdk.toml
releasy-graph/: Cargo.toml
releasy-graph/src/: error.rs  manifest.rs  plan.rs
releasy-handler/: Cargo.toml
releasy-handler/src/: cmd.rs  event.rs  handle.rs  main.rs
releasy-handler/tests/: repo-plan-sway-wallet-sdk.toml
