[package]
name = "releasy-core"
version = "0.0.0"
description = "releasy core functionality for emitting or receiving new events."
exclude = ["/tests"]
authors.workspace = true
edition.workspace = true
homepage.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
reqwest = "0.11.20"
serde = { version = "1.0.188", features = ["derive"] }
serde_json = "1.0.107"
thiserror = "1.0.48"
