[package]
name = "releasy-emit"
version = "0.0.0"
edition = "2021"
exclude = ["/tests"]

[dependencies]
anyhow = "1.0.75"
clap = { version = "4.4.2", features = ["derive"] }
releasy-core = { path = "../releasy-core" }
releasy-graph = { path = "../releasy-graph/" }
reqwest = "0.11.20"
serde = { version = "1.0.188", features = ["derive"] }
serde_json = "1.0.106"
tokio = { version = "1.32.0", features = ["macros", "rt-multi-thread", "process"] }
