[package]
name = "releasy-emit"
version = "0.1.0"
description = "releasy binary to emit new commit events to downstream repos."
exclude = ["/tests"]

authors.workspace = true
edition.workspace = true
homepage.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
anyhow = "1.0.75"
clap = { version = "4.4.2", features = ["derive"] }
releasy-core = { version = "0.1.0", path = "../releasy-core" }
releasy-graph = { version = "0.1.0", path = "../releasy-graph/" }
reqwest = "0.11.20"
serde = { version = "1.0.188", features = ["derive"] }
serde_json = "1.0.106"
tokio = { version = "1.32.0", features = ["macros", "rt-multi-thread", "process"] }
