[package]
name = "releasy-graph"
version = "0.0.0"
edition = "2021"
publish = false
description = "A utility library for describing cross-repo relations in the form of a dependency graph."

[dependencies]
petgraph = "0.6.4"
releasy-core = { path = "../releasy-core/" }
serde = { version = "1.0.188", features = ["derive"] }
serde_ignored = "0.1.9"
thiserror = "1.0.48"
toml = { version = "0.7", features = ["parse"] }
